--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
-    "name": "express",
+    "name": "nodejs",
     "builds": [
-        { "src": "**/*.js", "use": "@now/node" }
+        { "src": "*.js", "use": "@now/node" }
     ]
 }
